# Kitsune-Engine

./: .gitignore  .prettierrc.yml  .rustfmt.toml  11894.brk  CMakeLists.txt  Cargo.toml  City_Project_v13.brk  KE_config  README.md  asdgsdagwegd.blend  asdgsdagwegd.blend1  build.rs  build.sh  cmd.js  credits  editor.blend  editor.blend1  editor.txt  elevator.js  fps.js  gameplay.js  index.js  index_test.js  init_dev_ke.sh  ke_test  ke_test.brk  ke_test.kbf  kitsune_logo.xcf  main.cpp  mainD.cpp  makefile  sidescroller.js  stb_image.h.gch  terminal.js  text.xcf  topdown.js
.github/workflows/: linux_build.yml  main.yml  rust.yml
KB/Bricks/: cube.fbx  dome.fbx  flag.fbx  round_slope.fbx  spawnpoint.fbx
KB/color/: color.js  formatHex.js
KB/importer/: brk.js
KB/shaders/: outline.frag  outline.vert  sample.frag  sample.vert
KE_MOD/: KE_Objects.hpp  camera.hpp  model.hpp  prop.hpp  shader.hpp  texture.hpp
KE_MOD/lights/: KE_lights.hpp  pointlight.hpp
KE_MOD/menuing/: based_menu.hpp  image_element.hpp  menuing.hpp  text_element.hpp
V8_MOD/: V8_Objects.hpp  V8cmd.hpp  V8rayCast.hpp  dialog.hpp  fs.hpp  print.hpp  require.hpp  vector2.hpp  vector3.hpp  window.hpp
V8_MOD/KE_V8_Bridge/: KE_Bridge.hpp  V8camera.hpp  V8model.hpp  V8prop.hpp  V8shader.hpp  V8texture.hpp
audio/: start.mov
bbc_shaders/: normal_animate.frag
demos/: blahaj_berry_collection.7z
engine_dependent/: MonsterSchool.html  README.txt  collider.kesf  game_startup.ropes  missing.frag  tester.kat  trigger.kesf
engine_dependent/geo/: base_lines.frag  base_lines.vert
engine_dependent/shaders/: base.frag  base.vert  brush.frag  model.frag  (+2 more)
fonts/: convert.js  text.json  text.xcf
glad/: CMakeLists.txt
management_scripts/: HotLoad.hpp  management.hpp
map_objects/: corner1.mtl
maps/: awa  awa.kbf  awawawaw.kbf  burgor.kbf  city.kbf  crumbles.kbf  empty.kbf  house  house (copy).kbf  house copy.kbf  house.kbf  house_old.kbf  housea.kbf  ke_test.kbf  ke_test2.kbf  roy.kbf  stanfordlucy.brk  testing.kbf  waz.kbf  welcome.kbf
models/: block.glb  block.gltf  catgirl_confuzzles.fbx  computegg_sience.glb
scripts/: clienttest.js  console.js  dev_functions.js  fly_cam.js  index.js  portal.js  portal_ac.js  testing.js  trigger.js
shaders/: av.frag  av.vert  base.frag  base.vert  blender_test.frag  blender_test.vert  depthtest.frag  depthtest.vert  direct_error.frag  missing.frag  missing.vert  pbr_test.frag  plantt.vert  poratlawa.frag  poratlawa.vert  sample.frag  sample.vert  tub_water.frag  water.frag  water.vert
src/: buffer.rs  cameras.rs  char_control.rs  config.rs  dynamic_uniform.rs  fs_system.rs  garbage_collector.rs  js_land.rs  kbf.rs  ke_units.rs  lights.rs  main.rs  menu_system.rs  models.rs  multiplayer.rs  physic_props.rs  pog_fix.rs  props.rs  script.rs  shaders.rs  textures.rs  vmf.rs  world.rs
testers/: meow.frag  meow.vert
texture/: AINTEST.kesf  RJWalk.kesf  cat.kesf  class_table.kesf  farin.kesf  floor_tiles.kesf  mayryo.kesf  player_test.kesf  spotwich.kesf  tile.kesf  wall_detention_01.kesf  wall_detention_02.kesf
(+28 files in other folders)
