[package]
name = "kitsune-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
glutin = "0.30.3"
image = "0.24.5"
nalgebra = "0.32.1"
winit = "0.27.5"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
deno_core = "0.172.0"
deno_ast = "0.24.0"
lazy_static = "1.4.0"
serde = "1.0.155"
