[package]
name = "kitsune-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = "0.32.1"
glutin = "0.30.3"
image = "0.24.5"
nalgebra = "0.32.1"
winit = "0.27.5"
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
lazy_static = "1.4.0"
serde = "1.0.155"
rapier3d = "0.17.2"
libm = "0.2.7"
boa_runtime = "0.17.0"
boa_engine = "0.17.0"
futures-util = "0.3.28"
smol = "1.3.0"
