[package]
name = "kitsune-engine"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
glium = "0.32.1"
glutin = "0.30.3"
image = "0.24.5"
nalgebra = "0.32.1"
winit = "0.27.5"
tokio = { version = "1.25.0", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0.155"
rapier3d = "0.17.2"
libm = "0.2.7"
boa_runtime = "0.17.0"
boa_engine = "0.17.0"
futures-util = { version = "0.3.28", default-features = false, features = ["sink"], optional = true }
async-stream = { version = "0.3.5", optional = true }
smol = "1.3.0"
serde_json = { version ="1.0.107", features = ["raw_value"] }
gltf = "1.3.0"
rust_socketio = { version = "0.4.3", features = ["async"] }
socketioxide = "0.6.0"
axum = "0.6.20"
ufbx = "0.6.1"
keyboard-keynames = "0.2.0"
steamworks = "0.11.0"
